fix: road filter dropdown z-index over sliders + reset to all roads on clear

--- a/storyline.css
+++ b/storyline.css
@@ -61,6 +61,7 @@ html, body {
 
 .dropdown {
   position: absolute;
+  z-index: 60;
   top: 100%;
   left: 0;
   width: 100%;
